# data_science_project_template

./: LICENSE  README.md  dockerignore  gitignore  pre-commit-config.yaml  pyproject.toml
