[tool.poetry]
name = "comet-assay-quantification"
version = "1.0.0"
description = ""
authors = ["abdelkrimlaloui <lalouikarim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
numpy = "*"
scipy = "*"
Pillow = "*"
cython = "*"
pandas = "*"
matplotlib = "*"
scikit-image = "0.16.2"
tensorflow = ">=1.3.0,<2.0.0"
keras = "2.2.5"
opencv-python = "*"
h5py = "2.10.0"
imgaug = "*"
IPython = "*"
protobuf = "<3.21"
mask-rcnn = { git = "https://github.com/lalouikarim/Mask_RCNN.git" }
mmh3 = "3.0.0"
pydantic = "<2.0.0"
urllib3 = "1.26.6"
feast = "0.20.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
